upgraded to grails 2.3.11

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Fri Aug 01 15:07:12 EDT 2014
-app.grails.version=2.3.7
+#Wed Dec 17 13:19:18 EST 2014
+app.grails.version=2.3.11
 app.name=transmart-unavailable
+app.servlet.version=3.0
 app.version=0.1
